--- a/_posts/2019-05-02-j-class.md
+++ b/_posts/2019-05-02-j-class.md
@@ -6,3 +6,7 @@ javastudy: true
 # AM 09:33 커피한잔과 음악
 ## 메로나 + 아메리카노 를 실험해봄.. 네이버 블로그를 해보았는데, 라뗴맛은 났다.
 ## But.. 내취향에서는 좀 벗어 난걸로..
+## 클래스 vs 객체 vs 인스턴스
+## 클래스 : 미리 짜놓은 틀
+## 객체 : 현실에서 대상을 추상화 하여 구현하려는 대상
+## 인스턴스 : 소프트웨어로 실체화시켜 메모리에 실행되는 것.
