--- a/_posts/2019-05-11-navtive-P.md
+++ b/_posts/2019-05-11-navtive-P.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: native script
-projects: true
+project: true
 ---
 
 ## 이번 프로젝트는 Navtive script + Vue.js 로 앱 만들기
@@ -19,6 +19,8 @@ projects: true
 ### 시간이 지났을 경우 , 자리 옮기기  + 일어서기
 ## 문제 : 알람기능이 하이브리드 앱으로 가능 할 까??;;;; service 부분이 가능할지 안할지 모르겠다.
 
+
+### 메모앱이랑 내블로그에 올라가도록 연동해야겠다는 생각도 함.
 
 
 ### 추천 음식.
