--- a/_posts/2019-05-11-navtive-P.md
+++ b/_posts/2019-05-11-navtive-P.md
@@ -1,29 +1,28 @@
----
+ï»¿---
 layout: post
 title: native script
 project: true
 ---
+## ì´ë²ˆ í”„ë¡œì íŠ¸ëŠ” Navtive script + Vue.js ë¡œ ì•± ë§Œë“¤ê¸°
 
-## ÀÌ¹ø ÇÁ·ÎÁ§Æ®´Â Navtive script + Vue.js ·Î ¾Û ¸¸µé±â
+### ê³„íš ì•±
 
-### °èÈ¹ ¾Û
+### ì–´ë–»ê²Œ ë§Œë“¤ì§€ëŠ” ì•„ì§ ë¹„ë°€
 
-### ¾î¶»°Ô ¸¸µéÁö´Â ¾ÆÁ÷ ºñ¹Ð
+### ê³„íšì•±ì— ë„ì›€ë˜ëŠ” ê´€ì  ì°¾ì•„ë³´ê¸°.
 
-### °èÈ¹¾Û¿¡ µµ¿òµÇ´Â °üÁ¡ Ã£¾Æº¸±â.
+#### Study Manger is ê³µë¶€ í• ë•Œ ë„ì›€ë˜ëŠ” ì—­í™œ??? ê¸°ëŠ¥ ê°™ì€ê±° ì¶”ê°€
 
-#### Study Manger is °øºÎ ÇÒ¶§ µµ¿òµÇ´Â ¿ªÈ°??? ±â´É °°Àº°Å Ãß°¡
-
-### ½Ã°£ÀÌ Áö³µÀ» °æ¿ì , ¹°ÇÑÀÜ
-### ½Ã°£ÀÌ µÇ¾úÀ» °æ¿ì , ½ºÆ®·¹Äª
-### ½Ã°£ÀÌ Áö³µÀ» °æ¿ì , ÀÚ¸® ¿Å±â±â  + ÀÏ¾î¼­±â
-## ¹®Á¦ : ¾Ë¶÷±â´ÉÀÌ ÇÏÀÌºê¸®µå ¾ÛÀ¸·Î °¡´É ÇÒ ±î??;;;; service ºÎºÐÀÌ °¡´ÉÇÒÁö ¾ÈÇÒÁö ¸ð¸£°Ú´Ù.
-
-
-### ¸Þ¸ð¾ÛÀÌ¶û ³»ºí·Î±×¿¡ ¿Ã¶ó°¡µµ·Ï ¿¬µ¿ÇØ¾ß°Ú´Ù´Â »ý°¢µµ ÇÔ.
+### ì‹œê°„ì´ ì§€ë‚¬ì„ ê²½ìš° , ë¬¼í•œìž”
+### ì‹œê°„ì´ ë˜ì—ˆì„ ê²½ìš° , ìŠ¤íŠ¸ë ˆì¹­
+### ì‹œê°„ì´ ì§€ë‚¬ì„ ê²½ìš° , ìžë¦¬ ì˜®ê¸°ê¸°  + ì¼ì–´ì„œê¸°
+## ë¬¸ì œ : ì•ŒëžŒê¸°ëŠ¥ì´ í•˜ì´ë¸Œë¦¬ë“œ ì•±ìœ¼ë¡œ ê°€ëŠ¥ í•  ê¹Œ??;;;; service ë¶€ë¶„ì´ ê°€ëŠ¥í• ì§€ ì•ˆí• ì§€ ëª¨ë¥´ê² ë‹¤.
 
 
-### ÃßÃµ À½½Ä.
+### ë©”ëª¨ì•±ì´ëž‘ ë‚´ë¸”ë¡œê·¸ì— ì˜¬ë¼ê°€ë„ë¡ ì—°ë™í•´ì•¼ê² ë‹¤ëŠ” ìƒê°ë„ í•¨.
 
 
-#### ±×¸®°í ³»°¡ ÇÏ´Â ÇàÀ§¿¡¼­ , Ã¢ÀÛ + ÇØÅ· °øºÎ·Î ³ª´µ±â.
+### ì¶”ì²œ ìŒì‹.
+
+
+#### ê·¸ë¦¬ê³  ë‚´ê°€ í•˜ëŠ” í–‰ìœ„ì—ì„œ , ì°½ìž‘ + í•´í‚¹ ê³µë¶€ë¡œ ë‚˜ë‰˜ê¸°.
