--- a/_posts/2019-05-11-ThinkJek.md
+++ b/_posts/2019-05-11-ThinkJek.md
@@ -2,6 +2,9 @@
 layout: post
 title: 지킬테마 구조
 thinking: true
+comments: true
 ---
 
 ### 지킬 테마 구조를 파악 한 후, Direct tree 를 나눠서 수정해 할듯....
+
+## Project 이름은 지킬 분석하기!?
