--- a/_posts/2019-05-15-My-log.md
+++ b/_posts/2019-05-15-My-log.md
@@ -1,4 +1,4 @@
----
+﻿---
 layout: post
 title: 19-05-11
 mylog: true
@@ -12,4 +12,5 @@ mylog: true
 ### node js 공부
 
 
-### 14:56 집으로~ (Time: 1:56)
+### 14:56~ 17:40 집으로 & 게임 및 정리~ (Time: 02:44)
+### 17:40~ 공부 (알고리즘
